--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown" #menuProfilo id="qwerty">
   <button class="btn btn-default" data-toggle="collapse" id="menuProfilo" href="#manage-profile">
-    Profilo
+    <i class="glyphicon glyphicon-user"></i> &nbsp;{{accountService.username}}
     <span class="caret"></span>
   </button>
   <div >
