--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
               <i class="glyphicon glyphicon-lock"></i>
             </span> 
             <input type="password" class="form-control" name="password" required placeholder="Password"
-            [(ngModel)]="accountService.password" name="password" value="a"
+            [(ngModel)]="accountService.password"
             id="password"/>
           </div>
         </div>
