--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/edit-psw/edit-psw.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/edit-psw/edit-psw.component.html
@@ -1,3 +1,14 @@
-<p>
-  edit-psw works!
-</p>
+<div class="container-fluid">
+      <form name="form"  #changePswForm="ngForm" (submit)="changePsw()">
+        <div class="form-group has-warning" >
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-lock"></i>
+            </span>  
+            <input type="password" class="form-control" name="password" required placeholder="Password"
+            [(ngModel)]="newPassword"
+            id="password"/>
+          </div>
+          <input type="submit" class="btn btn-warning" value="Modifica passowrd" [disabled]="!changePswForm.form.valid"/> 
+        </div></form>
+</div>
