--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
     <!-- Form -->
     <div class="box">  
       <h2 class="text-warning">Login</h2>
-      <form name="form"  #loginForm="ngForm" (submit)="loginUserProva()">
+      <form name="form"  #loginForm="ngForm" (submit)="loginUser($event)">
         <div class="form-group has-warning" >
           <label class="control-label" for="email"> Email </label>
           <div class="input-group">
