--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.css
@@ -1,32 +1,42 @@
 :host {
-    height: 94vh;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    top: 5vh;
-    z-index: 9999;
-    position: absolute;
-    background-color: #636363;
-    cursor: default;
-    overflow: hidden;
-    -moz-transition : height 0.5s;
-    -webkit-transition : height 0.5s;
-    -o-transition : height 0.5s;
-    transition : height 0.5s;
-    color: #FFCE2B; 
+  height: 94vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  top: 5vh;
+  z-index: 9999;
+  position: absolute;
+  background-color: #636363;
+  cursor: default;
+  overflow: hidden;
+  -moz-transition : height 0.5s;
+  -webkit-transition : height 0.5s;
+  -o-transition : height 0.5s;
+  transition : height 0.5s;
+  color: #FFCE2B;
 }
 
 h3 {
-    color: #eea236;
+  color: #eea236;
+}
+
+.logout {
+  float: left;
+  height: 40px;
+}
+.icon {
+  float: right;
+  height: 40px;
 }
 
 .close {
-    float: right;
-    color: #FFCE2B;
-    opacity: 0.65;
-    text-shadow: 0 1px 0 #636363;
+  /* float: right; */
+  /* display: ; */
+  color: #FFCE2B;
+  opacity: 0.65;
+  text-shadow: 0 1px 0 #636363;
 }
 
 .close:hover {
-    opacity: 1;
+  opacity: 1;
 }
