--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.css
@@ -1,7 +1,7 @@
 #paper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 500%;
+  height: 500%;
   margin: 0;
   padding: 0;
 }
