--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
@@ -1,3 +1,5 @@
+:host {
+}
 .btn {
   border: none;
   border-radius: 0;
@@ -49,4 +51,6 @@ ul {
 #manage-profile {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  height: 94vh;
 }
