--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.css
@@ -1,10 +1,11 @@
 :host {
-  height: 94vh;
-  width: 100%;
+  /* height: 93bh; */
+  width: 100px;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   top: 5vh;
-  z-index: 9999;
+  left: 0;
+  z-index: 20;
   position: absolute;
   background-color: #636363;
   cursor: default;
