PROVA FIX CSS 3

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
@@ -4,5 +4,5 @@
     <span class="caret"></span>
   </button>
   <div >
-  <app-manage-profile class="collapse" id="manage-profile"></app-manage-profile></div>
+  <app-manage-profile class="collapse" id="manage-profile" style="height: 0px; width:0px; border: 0px;" ></app-manage-profile></div>
 </div>
