Prove caricamento progetto

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/proj-list/proj-list.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/proj-list/proj-list.component.html
@@ -7,7 +7,7 @@
           {{proj}}
         </div>
         <div class="right">
-        <button class="btn btn-warning" (click)="openProj(proj)">
+        <button class="btn btn-warning" (click)="openProj(proj)" type="button">
           <span class="glyphicon glyphicon-level-up" title="Apri"></span>
         </button>
         <button class="btn btn-warning" (click)="removeProj(proj)" type="button">
