--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/manage-profile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="q">
   <div class="container-fluid">
     <div class="logout">
       <button type="button" class="btn btn-warning" (click)=accountService.logout()>Logout</button>
