--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
@@ -48,7 +48,7 @@ ul {
 
 #manage-profile {
   margin: 0;
-  padding: 0;
   overflow: hidden;
-  height: 94vh;
+  max-height: 94vh;
+  position: absolute;
 }
