--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.css
@@ -1,9 +1,10 @@
 #paper {
-  position: fixed;
-  width: 500%;
-  height: 500%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .editClass {
