--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.css
@@ -1,3 +1,5 @@
+
+
 .btn {
   border: none;
   border-radius: 0;
@@ -47,8 +49,11 @@ ul {
 }
 
 #manage-profile {
-  margin: 0;
+  /* margin: 0;
   overflow: hidden;
   max-height: 94vh;
-  position: absolute;
+  position: absolute; */
+  transition: height 0.1s;
 }
+
+
