--- a/Front-End/src/app/components/editor-container/editor-container.component.html
+++ b/Front-End/src/app/components/editor-container/editor-container.component.html
@@ -3,11 +3,11 @@
 <app-menu></app-menu>
 <div class="row">
   <!-- component padre che racchiude gli elementi dell'editor -->
-  <div class="col-md-9 col-xs-9 editor">
+  <div class="editor">
     <app-editor></app-editor>
   </div>
   <!-- component  che racchiude gli elementi del acrivity frame, la quale rappresenta il flusso del programma -->
-  <div class="col-md-3 col-xs-3 activityframe">
+  <div class="activityframe">
     <app-activity-frame></app-activity-frame>
   </div>
 </div>
