Scomposizione menù classe( ver. alpha per Malick)
Il menù che gestisce le classi è stato scomposto in più component, il vecchio class-menu.component è ancora presente ed è stato solo commentata la sua comparsa nell’editor. Ora il nuovo menù contenitore si chiama edit-class-menu.component. E’ in versione embrionale e io e Malick lo andiamo a ripopolare ed alleggerire rispetto la vecchia versione.

--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.html
@@ -4,7 +4,8 @@
 
 </div>
 <div [hidden]="!selectedCell" class="editClass">
-    <class-menu [hidden]="mainEditorService.getActivityModeStatus()"></class-menu>
+    <app-edit-class-menu [hidden]="mainEditorService.getActivityModeStatus()"></app-edit-class-menu>
+    <!-- <class-menu [hidden]="mainEditorService.getActivityModeStatus()"></class-menu> -->
 </div>
 <div class="editClass">
   <activity-menu [hidden]="!mainEditorService.getActivityModeStatus()"></activity-menu>
