--- a/Front-End/src/styles.css
+++ b/Front-End/src/styles.css
@@ -1,8 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Saira');
 
- body {
+* {
+   font-family: 'Saira', sans-serif;
+}
+
+body {
    margin: 0;
    padding: 0;
    min-height: 100%;
-   background-color: #42413D; 
+   background-color: #42413D;
  }
+
+
