--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-attribute/class-add-attribute.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-attribute/class-add-attribute.component.html
@@ -1,16 +1,15 @@
 <div class="container">
   <button class="btn btn-warning" data-toggle="collapse" data-target="#aggiungiAttributo">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    &nbsp; Aggiungi Attributo
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp; Aggiungi Attributo
   </button>
   <div id="aggiungiAttributo" class="collapse">
     <div>
       <div class="checkboxContainer">
-        <input id="staticAtt" type="checkbox" (change)='updateCheckbox(checkStaticAtt.id)'/>
-        <label for="staticAtt" > Static </label>
+        <input id="staticAtt" type="checkbox" (change)='updateCheckbox(staticAtt.id)' #staticAtt/>
+        <label for="staticAtt"> Static </label>
       </div>
       <div class="checkboxContainer">
-        <input id="finalAtt" type="checkbox" name="final"  value="Final" (change)='updateCheckbox(checkFinalAtt.id)'/>
+        <input id="finalAtt" type="checkbox" (change)='updateCheckbox(finalAtt.id)' #finalAtt/>
         <label for="finalAtt"> Final </label>
       </div>
     </div>
@@ -29,11 +28,10 @@
     </div>
     <div class="aggiungiAttributo nomeAttr">
       <label>Nome</label>
-      <input [disabled]="!selectedTipoAtt" id="nome-attributo" #nomeAtt
-      (keyup.enter)="addAttributo(nomeAtt.value)">
+      <input [disabled]="!selectedTipoAtt" id="nomeAttributo" #nomeAtt>
     </div>
-    <button class="btn btn-default" [disabled]="!selectedTipoAtt"
-    (click)="addAttributo(nomeAtt.value, checkStaticAtt.checked, checkFinalAtt.checked, tipiAtt.value, accAtt.value)">
+    <button class="btn btn-default" [disabled]="false"
+    (click)="addAttributo(nomeAtt.value, staticAtt.checked, finalAtt.checked, tipiAtt.value, accessoAtt.value)">
     Aggiungi Attributo
   </button>
 </div>
