Inserimento funzioni nel class menu service

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  display-class-name works!
+&nbsp;&nbsp;{{name}}&nbsp;
   <button class="btn btn-warning" (click)="removeClass(name)" title="Rimuovi classe">
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
   </button>
