--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
@@ -2,5 +2,6 @@
   <app-display-class-name></app-display-class-name>
   <app-change-class-name></app-change-class-name>
   <app-class-add-attribute></app-class-add-attribute>
+  <app-class-list-attribute></app-class-list-attribute>
 </div>
 
