FIX unselect class
Ora quando si seleziona/deseleziona una classe compare/scompare il menù correttamente

--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.html
@@ -4,7 +4,7 @@
 
 </div>
 <div [hidden]="!selectedCell" class="editClass">
-    <app-edit-class-menu [hidden]="mainEditorService.getActivityModeStatus()"></app-edit-class-menu>
+    <app-edit-class-menu></app-edit-class-menu>
     <!-- <class-menu [hidden]="mainEditorService.getActivityModeStatus()"></class-menu> -->
 </div>
 <div class="editClass">
