--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
@@ -3,5 +3,6 @@
   <app-change-class-name></app-change-class-name>
   <app-class-add-attribute></app-class-add-attribute>
   <app-class-list-attribute></app-class-list-attribute>
+  <app-class-add-method></app-class-add-method>
 </div>
 
