--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.html
@@ -1,9 +1,11 @@
 <div class="container">
   <label>Modifica il nome</label>
   <div class="input-group">
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" #newName>
     <span class="input-group-btn">
-      <button class="btn btn-warning" type="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+      <button class="btn btn-warning" type="button" (click)="changeClassName(newName.value)">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      </button>
     </span>
   </div>
 </div>
