FIX display-name & change-name-class component

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-&nbsp;&nbsp;{{name}}&nbsp;
-  <button class="btn btn-warning" (click)="removeClass(name)" title="Rimuovi classe">
+{{this.classMenuService.name}}
+  <button class="btn btn-warning" (click)="removeClass(this.classMenuService.name)" title="Rimuovi classe">
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
   </button>
 </div>
