--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.html
@@ -5,7 +5,7 @@
   <div id="listaAttributi" class="collapse">
     Lista attributi
     <ul class="list-group">
-      <li class="list-group-item list-group-item-warning" *ngFor="let attributo of this.mainEditorService.selectedClasse.getAttributi()">
+      <li class="list-group-item list-group-item-warning" *ngFor="let attributo of this.classMenuService.selectedClasse.getAttributi()">
         <span>{{attributo.name}}: {{attributo.type}}
           <button class="btn btn-warning btnLista" (click)="removeAttributo(attributo.name)">
             <span class="glyphicon glyphicon-trash" aria-hidden="true" title="Rimuovi"></span>
